- Allow to open (any number of) R script files and rkward://-urls from the command line - Add command line option --reuse for reusing an existing instance of RKWard - This works by connecting to the running instance via dbus

--- a/rkward/misc/CMakeLists.txt
+++ b/rkward/misc/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(misc_STAT_SRCS
    editlabelsdialog.cpp
    editformatdialog.cpp
    rkmessagecatalog.cpp
+   rkdbusapi.cpp
    )
 
 QT4_AUTOMOC(${misc_STAT_SRCS})
