Frontend also requires linking against gettext, now (at least on windows it needs to be direct linking, too).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ ENDIF(NOT CMAKE_VERBOSE_MAKEFILE)
 
 SET(KDE_MIN_VERSION 3.9.7)	# KDE 4.0rc2
 FIND_PACKAGE(KDE4 REQUIRED)
+FIND_PACKAGE(Gettext REQUIRED)
 
 IF(FORCE_PRETTY_MAKEFILE)
 	SET(CMAKE_VERBOSE_MAKEFILE OFF)
