--- a/rkward/rkward.desktop
+++ b/rkward/rkward.desktop
@@ -24,6 +24,6 @@ Icon=rkward
 Exec=rkward -caption "%c" %i
 Terminal=false
 Type=Application
-DocPath=rkward/index.html
+X-DocPath=rkward/index.html
 Categories=Science;Math;NumericalAnalysis;
 # vi: encoding=utf-8
