--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ rkward/resource.ver
 rkward/version.h
 # Log files from testing
 tests/make_plugintests.txt
+# Message templates should not be in the repo
+*.pot
