added MIME type definitions for R scripts and data/workspace files, a service protocol and an additional desktop file to be able to directly open R fiels with RKWard.
maybe the MIME types should be set by some other application? however -- it's working.

--- a/rkward/CMakeLists.txt
+++ b/rkward/CMakeLists.txt
@@ -101,4 +101,6 @@ ELSE(Q_WS_MAC)
 	INSTALL(TARGETS rkward DESTINATION ${BIN_INSTALL_DIR})
 ENDIF(Q_WS_MAC)
 
-INSTALL(FILES rkward.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+INSTALL(FILES rkward.desktop rkward-open.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
+INSTALL(FILES r.xml rdata.xml DESTINATION ${XDG_MIME_INSTALL_DIR})
+INSTALL(FILES rkward.protocol DESTINATION ${SERVICES_INSTALL_DIR})
