--- a/rkward/rkward.desktop
+++ b/rkward/rkward.desktop
@@ -27,7 +27,7 @@ Exec=rkward -caption "%c" %i
 Terminal=false
 Type=Application
 X-DocPath=rkward/index.html
-Categories=Science;Math;NumericalAnalysis;
+Categories=Qt;KDE;Science;Math;NumericalAnalysis;
 # Startup notification broken, as startup id is not passed to rkward.frontend.
 # It may be possible to fix this in Qt 5.4. See https://git.reviewboard.kde.org/r/121230/
 StartupNotify=false
