--- a/rkward/rkward.desktop
+++ b/rkward/rkward.desktop
@@ -23,12 +23,8 @@ Comment[sk]=GUI pre R-project
 Comment[uk]=Графічний інтерфейс проекту R
 Comment[x-test]=xxGUI for the R-projectxx
 Icon=rkward
-Exec=rkward -caption "%c" %i
+Exec=STARTUP_ID_COPY=${DESKTOP_STARTUP_ID} rkward -caption "%c" %i
 Terminal=false
 Type=Application
 X-DocPath=rkward/index.html
 Categories=Qt;KDE;Science;Math;NumericalAnalysis;
-# Startup notification broken, as startup id is not passed to rkward.frontend.
-# It may be possible to fix this in Qt 5.4. See https://git.reviewboard.kde.org/r/121230/
-StartupNotify=false
-# vi: encoding=utf-8
