Allow switching frontend language (esp. of plugins) at runtime. In particular for automated testing, but made public, as there might be corner-cases, where this is useful outside of testing.

--- a/rkward/rbackend/rpackages/rkward/NAMESPACE
+++ b/rkward/rbackend/rpackages/rkward/NAMESPACE
@@ -108,6 +108,7 @@ export(rk.show.html)
 export(rk.show.message)
 export(rk.show.plot.info)
 export(rk.show.question)
+export(rk.switch.frontend.language)
 export(rk.sync)
 export(rk.sync.global)
 export(rk.toggle.plot.history)
