--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,9 @@ Priority: optional
 Maintainer: Thomas Friedrichsmeier <tfry@users.sourceforge.net>
 Build-Depends: debhelper (>= 6.0.0), kdelibs5-dev, cmake, r-base-dev (>= 2.8.0), libx11-dev
 Standards-Version: 3.9.6
-Homepage: http://rkward.sourceforge.net
-Vcs-Browser: http://sourceforge.net/p/rkward/code/HEAD/tree/trunk/rkward/debian/
-Vcs-Svn: http://svn.code.sf.net/p/rkward/code/trunk/rkward/debian/
+Homepage: http://rkward.kde.org
+Vcs-Browser: http://quickgit.kde.org/?p=rkward.git&a=tree&f=debian
+Vcs-Git: git://anongit.kde.org/rkward.git
 
 Package: rkward
 Architecture: any
