--- a/macports/kde/rkward/Portfile
+++ b/macports/kde/rkward/Portfile
@@ -20,7 +20,7 @@ long_description    RKWard aims to become an easy to use, transparent frontend t
                     for statistical computation and graphics. Besides a convenient GUI for the most important \
                     statistical functions, future versions will also provide seamless integration with an office-suite.
 
-homepage            http://rkward.sourceforge.net
+homepage            http://rkward.kde.org
 
 master_sites        sourceforge:rkward
 
