Start working on allowing to override some plugin aspects (visibility, for now) from R. Not functional, yet. In the process, merge RKContextMap into RKComponentGUIXML, and rework rk.list.plugins(), somewhat.

--- a/rkward/rbackend/rpackages/rkward/NAMESPACE
+++ b/rkward/rbackend/rpackages/rkward/NAMESPACE
@@ -103,6 +103,7 @@ export(rk.select.list)
 export(rk.sessionInfo)
 export(rk.set.label)
 export(rk.set.output.html.file)
+export(rk.set.plugin.status)
 export(rk.show.files)
 export(rk.show.html)
 export(rk.show.message)
