Start working on a way to import translations from KDE l10n to releases / git clones / dailies

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ rkward/version.h
 tests/make_plugintests.txt
 # Message templates should not be in the repo
 *.pot
+# General purpose temp directory for scripts
+scripts/tmp/
+
