--- a/rkward/rbackend/rpackages/rkward/DESCRIPTION
+++ b/rkward/rbackend/rpackages/rkward/DESCRIPTION
@@ -2,8 +2,8 @@ Package: rkward
 Type: Package
 Title: Provides functions related to the RKWard GUI
 Author: Thomas Friedrichsmeier <thomas.friedrichsmeier@ruhr-uni-bochum.de> and
-    the RKWard Team <rkward-devel@lists.sourceforge.net>
-Maintainer: RKWard-devel mailing list <rkward-devel@lists.sourceforge.net>
+    the RKWard Team <rkward-devel@kde.org>
+Maintainer: RKWard-devel mailing list <rkward-devel@kde.org>
 Depends:
     R (>= 2.9.0),methods
 Description: This package contains functions which are useful in combination
@@ -17,7 +17,7 @@ URL: http://rkward.kde.org
 Authors@R: c(person(given="Thomas", family="Friedrichsmeier",
     email="thomas.friedrichsmeier@ruhr-uni-bochum.de", role=c("aut")),
     person(given="RKWard-devel", family="mailing list",
-    email="rkward-devel@lists.sourceforge.net", role=c("cre","ctb")))
+    email="rkward-devel@kde.org", role=c("cre","ctb")))
 Version: 0.6.3
 Date: 2014-10-30
 Collate:
