--- a/rkward/windows/rkoutputwindow.rc
+++ b/rkward/windows/rkoutputwindow.rc
@@ -1,8 +1,9 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="rkward_outputwindow" version="54">
+<kpartgui name="rkward_outputwindow" version="640">
 	<MenuBar>
 		<Menu name="file"><text>&amp;File</text>
-			<Action name="print_output"/>
+			<Action name="print_help"/>
+			<Action name="save"/>
 		</Menu>
 		<Menu name="edit"><text>&amp;Edit</text>
 			<Action name="copy"/>
@@ -10,6 +11,8 @@
 			<Action name="output_flush"/>
 		</Menu>
 		<Menu name="view"><text>&amp;View</text>
+			<Action name="zoom_in"/>
+			<Action name="zoom_out"/>
 			<Separator/>
 			<Action name="output_refresh"/>
 		</Menu>
