--- a/rkward/windows/rkhelpwindow.rc
+++ b/rkward/windows/rkhelpwindow.rc
@@ -2,15 +2,18 @@
 <kpartgui name="rkward_helpwindow" version="640">
 	<MenuBar>
 		<Menu name="file"><text>&amp;File</text>
-			<Action name="print_help"/>
-			<Action name="save"/>
+			<Action name="print_html"/>
+			<Action name="save_html"/>
 		</Menu>
 		<Menu name="edit"><text>&amp;Edit</text>
 			<Action name="copy"/>
+			<Separator/>
+			<Action name="select_all"/>
 		</Menu>
 		<Menu name="view"><text>&amp;View</text>
 			<Action name="zoom_in"/>
 			<Action name="zoom_out"/>
+			<Action name="view_encoding"/>
 		</Menu>
 	</MenuBar>
 	<ToolBar fullWidth="true" name="mdiToolBar">
