--- a/rkward/windows/rkoutputwindow.rc
+++ b/rkward/windows/rkoutputwindow.rc
@@ -2,17 +2,20 @@
 <kpartgui name="rkward_outputwindow" version="640">
 	<MenuBar>
 		<Menu name="file"><text>&amp;File</text>
-			<Action name="print_help"/>
-			<Action name="save"/>
+			<Action name="print_html"/>
+			<Action name="save_html"/>
 		</Menu>
 		<Menu name="edit"><text>&amp;Edit</text>
 			<Action name="copy"/>
+			<Separator/>
+			<Action name="select_all"/>
 			<Separator/>
 			<Action name="output_flush"/>
 		</Menu>
 		<Menu name="view"><text>&amp;View</text>
 			<Action name="zoom_in"/>
 			<Action name="zoom_out"/>
+			<Action name="view_encoding"/>
 			<Separator/>
 			<Action name="output_refresh"/>
 		</Menu>
