Implement searchbar for new HTML view

--- a/rkward/misc/CMakeLists.txt
+++ b/rkward/misc/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(misc_STAT_SRCS
    editformatdialog.cpp
    rkmessagecatalog.cpp
    rkdbusapi.cpp
+   rkfindbar.cpp
    )
 
 QT4_AUTOMOC(${misc_STAT_SRCS})
