KF5 porting: First steps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,22 @@
 PROJECT(rkward)
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4)	# KDElibs seems to need 2.6, though
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)	# As required by KF5
 
 IF(NOT CMAKE_VERBOSE_MAKEFILE)
 	SET (FORCE_PRETTY_MAKEFILE ON)
 ENDIF(NOT CMAKE_VERBOSE_MAKEFILE)
 
-SET(KDE_MIN_VERSION 3.9.7)	# KDE 4.0rc2
-FIND_PACKAGE(KDE4 REQUIRED)
+FIND_PACKAGE(ECM 0.0.11 REQUIRED NO_MODULE)
 FIND_PACKAGE(Gettext REQUIRED)
+SET(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
+
+INCLUDE(KDEInstallDirs)
+INCLUDE(KDECMakeSettings)
+INCLUDE(KDECompilerSettings)
+INCLUDE(FeatureSummary)
+
+FIND_PACKAGE(Qt5 5.2 CONFIG REQUIRED COMPONENTS Widgets Xml Network WebKit)
+FIND_PACKAGE(KF5 5.0 REQUIRED COMPONENTS CoreAddons)
 
 IF(FORCE_PRETTY_MAKEFILE)
 	SET(CMAKE_VERBOSE_MAKEFILE OFF)
@@ -18,11 +26,9 @@ ADD_DEFINITIONS(${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -DQT_NO_CAST_TO_ASCII)
 #uncomment the line below to save ~250-350kB in object size
 #ADD_DEFINITIONS(-DRKWARD_NO_TRACE)
 
-LINK_DIRECTORIES(${KDE4_LIB_DIR})
-
 ADD_SUBDIRECTORY(rkward)
 ADD_SUBDIRECTORY(i18n)
 ADD_SUBDIRECTORY(doc)
 ADD_SUBDIRECTORY(tests)
 
-# TODO: figure out how to make source distributions (with README files, etc.)
+FEATURE_SUMMARY(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
