--- a/rkward/icons/app-icon/CMakeLists.txt
+++ b/rkward/icons/app-icon/CMakeLists.txt
@@ -1,1 +1,1 @@
-KDE4_INSTALL_ICONS(${ICON_INSTALL_DIR})
+ECM_INSTALL_ICONS(ICONS 16-apps-rkward.png 22-apps-rkward.png 32-apps-rkward.png 48-apps-rkward.png 64-apps-rkward.png 128-apps-rkward.png sc-apps-rkward.svgz DESTINATION ${ICON_INSTALL_DIR})
