--- a/rkward/CMakeLists.txt
+++ b/rkward/CMakeLists.txt
@@ -32,7 +32,7 @@ ENDIF(WIN32)
 ADD_SUBDIRECTORY( windows )
 ADD_SUBDIRECTORY( syntax )
 
-INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${QT_QTWEBKIT_INCLUDE_DIR} ${X11_X11_INCLUDE_PATH} )
+INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}   ${QT_QTWEBKIT_INCLUDE_DIR} ${X11_X11_INCLUDE_PATH} )
 
 SET(RKWard_Sources
 	rkward.cpp
@@ -47,7 +47,7 @@ SET(RKWard_Sources
 GET_DIRECTORY_PROPERTY(R_SHAREDLIBDIR DIRECTORY rbackend LINK_DIRECTORIES)
 LINK_DIRECTORIES(${R_SHAREDLIBDIR})
 
-KDE4_ADD_EXECUTABLE(rkward.frontend ${RKWard_Sources})
+add_executable(rkward.frontend ${RKWard_Sources})
 SET_TARGET_PROPERTIES(rkward.frontend PROPERTIES
         MACOSX_BUNDLE_BUNDLE_NAME "RKWard")
 
@@ -60,7 +60,7 @@ IF(Q_WS_MAC)
 		@ONLY)
 ENDIF(Q_WS_MAC)
 
-TARGET_LINK_LIBRARIES(rkward.frontend  windows ${RKWARD_ADDLIBS} agents dialogs plugin settings dataeditor core scriptbackends rbackend misc KF5::TextEditor ${KDE4_KFILE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KDEWEBKIT_LIBS} Qt5::DBus ${QT_QTSCRIPT_LIBRARY} Qt5::Network ${GETTEXT_LIBRARIES})
+TARGET_LINK_LIBRARIES(rkward.frontend  windows ${RKWARD_ADDLIBS} agents dialogs plugin settings dataeditor core scriptbackends rbackend misc KF5::TextEditor   ${KDE4_KDEWEBKIT_LIBS} Qt5::DBus Qt5::Script Qt5::Network ${GETTEXT_LIBRARIES})
 
 # wrapper executable
 GET_DIRECTORY_PROPERTY(R_EXECUTABLE DIRECTORY rbackend DEFINITION R_EXECUTABLE)
