--- a/doc/rkward/CMakeLists.txt
+++ b/doc/rkward/CMakeLists.txt
@@ -1,2 +1,2 @@
-KDE4_CREATE_HANDBOOK (index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en)
-KDE4_CREATE_MANPAGE (man-rkward.1.docbook 1 INSTALL_DESTINATION ${MAN_INSTALL_DIR})
+kdoctools_create_handbook (index.docbook INSTALL_DESTINATION ${HTML_INSTALL_DIR}/en SUBDIR rkward)
+kdoctools_create_manpage (man-rkward.1.docbook 1 INSTALL_DESTINATION ${MAN_INSTALL_DIR})
