--- a/rkward/qwinhost/CMakeLists.txt
+++ b/rkward/qwinhost/CMakeLists.txt
@@ -1,9 +1,9 @@
 IF(WIN32)
-	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KDE4_INCLUDE_DIR} ${QT_INCLUDES})
+	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
 
 	# QT4-automoc does not work, as qwinhost.cpp does not have the #include "qwhinhost.moc"-line.
 	# We don't want to add it to keep changes small, and use manual moccing, here, instead
-	QT4_WRAP_CPP(MANUAL_MOC_CXX qwinhost.h)
+	qt5_wrap_cpp(MANUAL_MOC_CXX qwinhost.h)
 	SET(qwinhost_STAT_SRCS
 		qwinhost.cpp
 		${MANUAL_MOC_CXX}
