--- a/rkward/dialogs/CMakeLists.txt
+++ b/rkward/dialogs/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(dialogs_STAT_SRCS
    )
 
 ADD_LIBRARY(dialogs STATIC ${dialogs_STAT_SRCS})
-
+TARGET_LINK_LIBRARIES(dialogs Qt5::Widgets KF5::KDELibs4Support)
 
 ########### install files ###############
 
