--- a/rkward/dataeditor/CMakeLists.txt
+++ b/rkward/dataeditor/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(dataeditor_STAT_SRCS
    )
 
 ADD_LIBRARY(dataeditor STATIC ${dataeditor_STAT_SRCS})
+TARGET_LINK_LIBRARIES(dataeditor Qt5::Widgets KF5::KDELibs4Support)
 
 ########### install files ###############
 
