Small progress on accordion widget.

--- a/rkward/misc/CMakeLists.txt
+++ b/rkward/misc/CMakeLists.txt
@@ -26,7 +26,7 @@ SET(misc_STAT_SRCS
    rkmessagecatalog.cpp
    rkdbusapi.cpp
    rkfindbar.cpp
-   rktabslide.cpp
+   rkaccordiontable.cpp
    )
 
 QT4_AUTOMOC(${misc_STAT_SRCS})
