First (incomplete, rough, buggy) version of RKAccordionTable.
Now internally based on QTreeView instead of QTableView, as this seems more suited for the task, after all.

--- a/rkward/misc/CMakeLists.txt
+++ b/rkward/misc/CMakeLists.txt
@@ -30,6 +30,8 @@ SET(misc_STAT_SRCS
    )
 
 QT4_AUTOMOC(${misc_STAT_SRCS})
+# Urghs. QT4_AUTOMOC scans only the .h-file for Q_OBJECT macros. Let's hope this will be better with KF5
+QT4_GENERATE_MOC (rkaccordiontable.cpp ${CMAKE_CURRENT_BINARY_DIR}/rkaccordiontablemodel_moc.cpp)
 
 ADD_LIBRARY(misc STATIC ${misc_STAT_SRCS})
 
